# differ

./: .gitignore  README.md  Tiltfile  differ.yml  docker-compose-dev.yml  docker-compose.yml  getToken.ps1  get_token.sh  local-docker-compose.yml  nginx.conf
.github/workflows/: build.yaml
api-differ/: Dockerfile  requirements.txt  setup.py
api-differ/differ_api/: __init__.py  differ.py
app-differ/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
app-differ/e2e/src/: app.e2e-spec.ts
app-differ/nginx/: nginx.conf
app-differ/src/: index.html  styles.scss
app-differ/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  diff-getter.service.spec.ts  diff-getter.service.ts
argocd/: README.md  differ-apps.yaml
argocd/apps/: differ-prod.yaml  differ-staging.yaml
argocd/projects/: differ-project.yaml
differ-api/: Dockerfile  pyproject.toml
differ-api/src/differ_api/: __init__.py  main.py
differ-app/: Dockerfile  angular.json  package-lock.json  package.json
differ-app/src/: index.html  styles.scss
k8s/base/: configmap.yaml  differ-api-configmap.yaml  differ-api-deployment.yaml  differ-api-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  redis-deployment.yaml  redis-service.yaml  skills-ui-deployment.yaml  skills-ui-service.yaml
local-k8s/api/: deployment.yaml  ingress.yaml  service.yaml
local-k8s/app/: deployment.yaml  ingress.yaml  service.yaml
local-k8s/common/: ingress.yaml  namespace.yaml
local-k8s/infra/: redis.yaml
nginx/: prod-nginx.conf
(+33 files in other folders)
